# neurosym-kg

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_qa.py  benchmark_real.py  benchmark_wikidata.py  compare_reasoners_ollama.py  comparing_reasoners.py  neo4j_example.py  neo4j_ollama_demo.py  ollama_demo.py
neurosym_kg/: __init__.py
neurosym_kg/core/: __init__.py  config.py  exceptions.py  interfaces.py  types.py
neurosym_kg/evaluation/: __init__.py  benchmarks.py  metrics.py  runner.py
neurosym_kg/knowledge_graphs/: __init__.py  base.py  in_memory.py  neo4j_kg.py  wikidata.py
neurosym_kg/llm_backends/: __init__.py  anthropic_backend.py  base.py  mock_backend.py  ollama_backend.py  openai_backend.py
neurosym_kg/reasoners/: __init__.py  base.py  graph_rag.py  reasoning_on_graphs.py  subgraph_rag.py  think_on_graph.py
neurosym_kg/symbolic/: __init__.py  constraint_checker.py  rules.py
neurosym_kg/utils/: __init__.py  caching.py
notebooks/: 01_quickstart.ipynb  02_comparing_reasoners.ipynb  04_evaluation.ipynb  05_symbolic_reasoning.ipynb
tests/: conftest.py
tests/unit/: test_core_types.py  test_in_memory_kg.py  test_metrics.py
