[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurosym-kg"
version = "0.1.0"
description = "A unified neuro-symbolic reasoning framework for Knowledge Graphs and LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "NeuroSym-KG Contributors" }
]
keywords = [
    "knowledge-graph",
    "llm",
    "neuro-symbolic",
    "reasoning",
    "question-answering",
    "rag",
    "graph-rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "tenacity>=8.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.65",
    "structlog>=23.0",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# LLM backends
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
huggingface = ["transformers>=4.36", "torch>=2.0", "accelerate>=0.25"]
vllm = ["vllm>=0.2"]

# KG backends
neo4j = ["neo4j>=5.0"]
sparql = ["SPARQLWrapper>=2.0", "rdflib>=7.0"]

# Embeddings
embeddings = ["sentence-transformers>=2.2"]

# Evaluation
eval = ["datasets>=2.14", "scikit-learn>=1.3"]

# All optional dependencies
all = [
    "neurosym-kg[openai,anthropic,huggingface,neo4j,sparql,embeddings,eval]"
]

# Development dependencies
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
    "ipython>=8.0",
    "jupyter>=1.0",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.23",
]

[project.urls]
Homepage = "https://github.com/your-org/neurosym-kg"
Documentation = "https://neurosym-kg.readthedocs.io"
Repository = "https://github.com/your-org/neurosym-kg"
Issues = "https://github.com/your-org/neurosym-kg/issues"

[project.scripts]
neurosym = "neurosym_kg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["neurosym_kg"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["neurosym_kg"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "scipy.*",
    "sklearn.*",
    "transformers.*",
    "torch.*",
    "neo4j.*",
    "SPARQLWrapper.*",
    "rdflib.*",
    "sentence_transformers.*",
    "datasets.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Fast unit tests",
    "integration: Integration tests requiring external services",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["neurosym_kg"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
